lib/libremidi-5.4.3/tests/corpus/Invalid/No Header Chunk/sgt-pepper.mid
<HTML><HEAD>
<TITLE>ERROR: The requested URL could not be retrieved</TITLE>
</HEAD><BODY>
<H1>ERROR</H1>
<H2>The requested URL could not be retrieved</H2>
<HR>
<P>
While trying to retrieve the URL:
<A HREF="http://captain-dave.com/BestMidis/sgt-pepper.mid">http://captain-dave.com/BestMidis/sgt-pepper.mid</A>
<P>
The following error was encountered:
<UL>
<LI><STRONG>Connection Failed</STRONG>
</UL>
<P>The system returned:
<PRE><I>    (32) Broken pipe</I></PRE>
<P>This means that:
<PRE>
    The remote site or server may be busy or down.  Please try again later.
</PRE>
<P>

<HR>
<ADDRESS>
Generated by squid/1.1.22@jester.ti.com
</ADDRESS></BODY></HTML>

